--- a/upright-italic/style.css
+++ b/upright-italic/style.css
@@ -3,9 +3,8 @@
 	src: url('cmunui.eot');
 	src: url('cmunui.eot?#iefix') format('embedded-opentype'),
 		 url('cmunui.woff') format('woff'),
-		 url('cmunui.uif') format('truetype'),
+		 url('cmunui.ttf') format('truetype'),
 		 url('cmunui.svg#cmunui') format('svg');
 	font-weight: normal;
 	font-style: italic;
 }
-
